--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -8,8 +8,7 @@ set -g mouse on
 set -g default-terminal "tmux-256color"
 
 # Configure the catppuccin plugin
-set -g @catppuccin_flavor 'latte'
-# set -g @catppuccin_flavor "$CATPPUCCIN_FLAVOR"
+set -g @catppuccin_flavor "$CATPPUCCIN_FLAVOR"
 
 set -g @catppuccin_window_status_style "rounded"
 
